fix(about): adjust story spacing

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -36,7 +36,7 @@
   }
 
   .story-image {
-    margin: $spacer;
+    margin: 3 * $spacer 0;
     height: 500px;
 
     img {
